frontend_modified.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  type: ClusterIP 
  ports:
  - port: 80
  selector:
    app: guestbook
    tier: frontend
