ingress_production.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mstaxx-production
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: guestbook.mstakx.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
