ingress_staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mstaxx-staging
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: staging-guestbook.mstakx.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
